Initial commit with clean setup

--- a/Fraud_Detection_Final.ipynb
+++ b/Fraud_Detection_Final.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3e68110b-f472-455c-a44a-c1e2e3a252c7",
    "metadata": {},
    "outputs": [
@@ -337,11 +337,12 @@
     }
    ],
    "source": [
-    "import pickle\n",
-    "with open(\"fraud_model.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(model, f)\n",
-    "with open(\"scaler.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(scaler, f)\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import joblib\n",
+    "\n",
+    "# After training\n",
+    "joblib.dump(model, 'fraud_model.joblib')\n",
+    "joblib.dump(scaler, 'scaler.joblib')\n",
     "\n",
     "print(\" Saved fraud_model.pkl and scaler.pkl\")"
    ]
